Coloque mi encabezado y agregue mi primer pasatiempo

--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pasatiempos</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Mi lista de pasatiempos</h1>
+    </header>
+    <main>
+        <h2>Disfrutar el tiempo con mi familia</h2>
+        <p>Me gusta convivir mucho con mi familia, realizar actividades divertidas,</p>
+        <p>tener nuestras platicas de muchas horas, reir juntos sin problemas y demás.</p>
+    </main>
 </body>
 </html>
