Agregue mi segundo y tercer pasatiempo

--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
         <h2>Disfrutar el tiempo con mi familia</h2>
         <p>Me gusta convivir mucho con mi familia, realizar actividades divertidas,</p>
         <p>tener nuestras platicas de muchas horas, reir juntos sin problemas y demás.</p>
+
+        <h2>Cocinar y realizar postres</h2>
+        <p>Me gusta mucho cocinar, me tranquiliza, me entretiene y disfruto hacerlo.</p>
+        <p>Por otro lado los postres son mi parte favorita de la cocina, sobre todo cuando es un clima fresco me gusta más.</p>
+
+        <h2>Jugar con nustras mascotas</h2>
+        <p>Es uno de los momentos que mas disfruto de mi dia a dia, si no es que mi parte favorita.🐾❤️</p>
     </main>
 </body>
 </html>
