Agregue imagen al Pasatiempo #1

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         <p>Me gusta convivir mucho con mi familia, realizar actividades divertidas,</p>
         <p>tener nuestras platicas de muchas horas, reir juntos sin problemas y demás.</p>
 
+        <img 
+        width="200px"
+        src="Pasatiempo 1 Familia.jpg" 
+        alt="Ilustra una familia sonriendo">
+
         <h2>Cocinar y realizar postres</h2>
         <p>Me gusta mucho cocinar, me tranquiliza, me entretiene y disfruto hacerlo.</p>
         <p>Por otro lado los postres son mi parte favorita de la cocina, sobre todo cuando es un clima fresco me gusta más.</p>
