Agregue imagen al Pasatiempo #2

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
         <p>Me gusta mucho cocinar, me tranquiliza, me entretiene y disfruto hacerlo.</p>
         <p>Por otro lado los postres son mi parte favorita de la cocina, sobre todo cuando es un clima fresco me gusta más.</p>
 
+        <img 
+        width="200px"
+        src="Pasatiempo 2 Reposteria.jpg" 
+        alt="Ilustra ingredientes preparativos para una receta">
+        
         <h2>Jugar con nustras mascotas</h2>
         <p>Es uno de los momentos que mas disfruto de mi dia a dia, si no es que mi parte favorita.🐾❤️</p>
     </main>
