Agregue imagen al Pasatiempo #3

--- a/index.html
+++ b/index.html
@@ -27,9 +27,14 @@
         width="200px"
         src="Pasatiempo 2 Reposteria.jpg" 
         alt="Ilustra ingredientes preparativos para una receta">
-        
+
         <h2>Jugar con nustras mascotas</h2>
         <p>Es uno de los momentos que mas disfruto de mi dia a dia, si no es que mi parte favorita.🐾❤️</p>
+
+        <img
+        width="200px" 
+        src="Pasatiempo 3 Mascota.jpg" 
+        alt="Ilustra un perrito">
     </main>
 </body>
 </html>
